@@ -469,7 +469,7 @@ Shawn Ligocki
 Martin Ligr
 Grant Limberg
 Christopher Lindblad
-Bjorn Lindqvist
+Björn Lindqvist
 Per Lindqvist
 Eric Lindvall
 Gregor Lingl
